objects/yeslocaldigital__Form_Build__c.object
<CustomObject>
    <fields>
        <fullName>yeslocaldigital__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Form_Action__c</fullName>
        <label>Form Action</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Form_Active_End_Date_Time__c</fullName>
        <label>Form Active End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Form_Active_Start_Date_Time__c</fullName>
        <label>Form Active Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Form_Builder_State__c</fullName>
        <label>Form Builder State</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Form_Element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Element</label>
        <referenceTo>yeslocaldigital__Form_Element__c</referenceTo>
        <relationshipName>Form_Builds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Form_Layout__c</fullName>
        <label>Form Layout</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Form_Name__c</fullName>
        <label>Form Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Form_Status__c</fullName>
        <label>Form Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Navigation_URL__c</fullName>
        <description>Form Submission Confirmation URL. The target URL where the user would be redirected after the form was submitted. The default value is &apos;communityname/s/savecongrats&apos;.</description>
        <inlineHelpText>It can be a community page URL, for example:  &apos;communityname/s/savecongrats&apos;, or an external website URL, for example: &apos;https://www.google.com&apos; (Quotes are not needed)</inlineHelpText>
        <label>Navigation URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yeslocaldigital__Output_Format__c</fullName>
        <label>Output Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>WORD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>yeslocaldigital__e_Sign_Connection__c</fullName>
        <label>e-Sign Connection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DocuSign</fullName>
                </value>
                <value>
                    <fullName>CongaSign</fullName>
                </value>
                <value>
                    <fullName>AdobeSign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dynamic Form</label>
    <listViews>
        <fullName>yeslocaldigital__All</fullName>
        <columns>NAME</columns>
        <columns>yeslocaldigital__Form_Name__c</columns>
        <columns>yeslocaldigital__Form_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>yeslocaldigital__In_use</fullName>
        <columns>NAME</columns>
        <columns>yeslocaldigital__Form_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>In use</label>
    </listViews>
    <nameField>
        <displayFormat>FB-{0000}</displayFormat>
        <label>Form No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>